self-host/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prism-relay
  labels:
    app: prism-relay
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: prism-relay
